external-crates/move/crates/move-compiler/tests/rtd_mode/one_time_witness/init_unbound_type.snap
---
source: crates/move-compiler/tests/move_check_testrtdte.rs
info:
  flavor: rtd
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/rtd_mode/one_time_witness/init_unbound_type.move:2:20
  │
2 │     fun init(_ctx: who::TxContext) {}
  │                    ^^^ Unbound module alias 'who'

error[E03004]: unbound type
  ┌─ tests/rtd_mode/one_time_witness/init_unbound_type.move:8:17
  │
8 │     fun init(_: Who, _ctx: &mut rtd::tx_context::TxContext) {}
  │                 ^^^ Unbound type 'Who' in current scope
